# skia_tutorial

./: CMakeLists.txt  SDL_README.md  clang_format.py
CMAKE/: FindSDL2.cmake  FindSDL2TTF.cmake  FindSDL2_IMAGE.cmake
md/: enca.txt  libiconv.txt
resources/: font_zh-cn.txt
src/glfw/: hello_glfw3.cpp
src/opencv/: hello_opencv.cpp
src/sdl2/: example.cpp  example2.cpp  sdl2_test.cpp
src/skia/: file.cpp  file.h  hello_skia.cpp  hello_skia_sdl2.cpp  skia_utils.cpp  skia_utils.h  utils.cpp  utils.h
src/skia/50_percent/: 50_percent_gray.cpp  50_percent_srgb.cpp
src/skia/alpha/: Alpha_Constants_a.cpp  Alpha_Constants_b.cpp
src/skia/bitmap/: Bitmap_HeapAllocator_allocPixelRef.cpp  Bitmap_allocN32Pixels.cpp  Bitmap_allocPixels.cpp  Bitmap_allocPixelsFlags.cpp  Bitmap_allocPixels_2.cpp  Bitmap_allocPixels_3.cpp  Bitmap_allocPixels_4.cpp  bitmap_012.cpp  bitmap_computeisopaque.cpp
src/skia/canvas/: hello_canvas.cpp  learn_canvas.cpp
src/skia/drawable/: circle_rect.cpp  circle_rect_shadow.cpp
src/skia/progressbar/: custom_progressbar.cpp  custom_progressbar2.cpp  progressbar.cpp
src/skia/skparagraph/: hello_check_font.cpp
src/skia/test/: path_test1.cpp  path_test2.cpp  test_make_background.cpp  test_skdata.cpp
src/skia/text/: text_rendering.cpp  text_shadow.cpp
src/skia/use/: bitmap_use.cpp
src/skia/watermark/: single_line_water_mark.cpp  water_mark.cpp  water_mark_test.cpp  water_mark_utils.cpp  water_mark_utils.h
